<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fycz.fragment.XunweiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/home_page_vp"
            android:src="@drawable/yangmei"
            android:scaleType="centerCrop"
            android:background="@color/orange"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:id="@+id/xunwei_today_title_textview"
                android:text="@string/xunwei_today_title"/>
            <TextView
                android:layout_width="65dp"
                android:layout_height="3dp"
                android:id="@+id/xunwei_today_title_colortext"
                android:layout_below="@+id/xunwei_today_title_textview"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/orange"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/xunwei_jiantou"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/heizhimahu"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_hubeiheizhimahu"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ludoubing"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_guizhoulvdougao"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/yunnanxianhuabing"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_yunnanxianhuabing"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:id="@+id/xunwei_today_title_textview2"
                android:text="@string/xunwei_guess_you_title"/>
            <TextView
                android:layout_width="65dp"
                android:layout_height="3dp"
                android:id="@+id/xunwei_today_title_colortext2"
                android:layout_below="@+id/xunwei_today_title_textview2"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/orange"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/xunwei_jiantou"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/meirongyangyan"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_meiyanmeirong"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bushen"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_bushen"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/kaoqianbichi"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_kaoshibichi"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/shanximeishi"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_shanximeishi"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/sushixiangfanggao"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_shejiangshangdezhongguo"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/xiaoshihou"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textSize="13sp"
                    android:text="@string/xunwei_xiaoshihou"
                    android:background="@color/gray_two_alpha"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
