<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fycz.fragment.HouhuayuanFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="334dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="334dp"
                android:scaleType="centerCrop"
                android:src="@drawable/wode_backgroundpng"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/touxiang2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/wode_name"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/wode_qianming"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray_two_alpha"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="520"
                            android:gravity="center"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/wode_haoyou"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:background="@color/gray_two_alpha"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="3420"
                            android:gravity="center"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/wode_fensi"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray_two_alpha"/>

            </LinearLayout>

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50"
                    android:src="@drawable/meirongyangyan"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:src="@drawable/heizhimahu"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ludoubing"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
